MIR-1198 Support validation of PDF/A documents
removed unwanted changes